graphql-parser/tests/snapshots/tests__parse_schema__directive_descriptions__win.snap
---
source: graphql-parser/tests/tests.rs
expression: result
---
Ok(
    Document {
        definitions: [
            Directive(
                DirectiveDefinition {
                    position: Pos(4:1),
                    description: Some(
                        "Directs the executor to include this field or fragment only when the `if` argument is true.\n",
                    ),
                    name: "include",
                    arguments: [
                        InputValue {
                            position: Pos(5:3),
                            description: Some(
                                "Included when true.\n",
                            ),
                            name: "if",
                            value_type: NonNullType(
                                NamedType(
                                    "Boolean",
                                ),
                            ),
                            default_value: None,
                            directives: [],
                        },
                    ],
                    locations: [
                        Field,
                        FragmentSpread,
                        InlineFragment,
                    ],
                },
            ),
            Directive(
                DirectiveDefinition {
                    position: Pos(14:1),
                    description: Some(
                        "Directs the executor to skip this field or fragment when the `if` argument is true.\n",
                    ),
                    name: "skip",
                    arguments: [
                        InputValue {
                            position: Pos(15:3),
                            description: Some(
                                "Skipped when true.\n",
                            ),
                            name: "if",
                            value_type: NonNullType(
                                NamedType(
                                    "Boolean",
                                ),
                            ),
                            default_value: None,
                            directives: [],
                        },
                    ],
                    locations: [
                        Field,
                        FragmentSpread,
                        InlineFragment,
                    ],
                },
            ),
        ],
    },
)
